# minerve

./: .gitignore  Cargo.toml  Makefile  README.md
prompts/: EXECUTOR_PROMPT.txt  MAIN_SYSTEM_PROMPT.txt  QA_PROMPT.txt
src/: chat.rs  cli.rs  handle_tool_call_tests.rs  history.rs  main.rs  minerve.rs  theme.rs  token_counter.rs  utils.rs
src/tools/: compile_node_project_tool.rs  compile_typescript_project_tool.rs  create_file_tool.rs  extract_structure_tool.rs  get_general_context.rs  get_general_context_tool.rs  get_url_tool.rs  git_diff_cached_tool.rs  git_diff_tool.rs  git_status_tool.rs  list_files_tool.rs  mod.rs  node_yarn_tool.rs  registry.rs  replace_content_tool.rs  run_cargo_check_tool.rs  run_shell_command_tool.rs  search_for_path_pattern_tool.rs  search_for_string_tool.rs  set_user_command.rs  set_whole_file_contents_tool.rs  show_file_tool.rs  token_counter.rs  utils.rs
