[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
openai = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
dirs = "6.0.0"
crossterm = "0.29.0"
smol = "2.0.2"
cursive = "0.21.1"
